--- a/app/templates/blog_detail.html
+++ b/app/templates/blog_detail.html
@@ -9,7 +9,7 @@
             <div class="card-body">
                 <h1 class="card-title">{{ post.title }}</h1>
                 <p class="text-muted">
-                    Posted by <a href="{% url 'author_detail' post.author.id %}" class="text-decoration-none">{{ post.author.username }}</a>
+                    Posted by <a href="{% url 'blogger_detail' post.author.id %}" class="text-decoration-none">{{ post.author.username }}</a>
                     on {{ post.created_at|date:"F j, Y" }}
                 </p>
                 <div class="card-text">
