--- a/app/templates/blogger_list.html
+++ b/app/templates/blogger_list.html
@@ -6,7 +6,7 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-8">
-            <div class="card bg-dark text-light">
+            <div class="card">
                 <div class="card-body">
                     <h1 class="card-title mb-4">All Bloggers</h1>
                     
@@ -19,12 +19,12 @@
                                         <img src="{{ blogger.profile_picture.url }}" alt="{{ blogger.username }}" class="rounded-circle me-3" style="width: 64px; height: 64px; object-fit: cover;">
                                     {% else %}
                                         <div class="rounded-circle bg-secondary me-3 d-flex align-items-center justify-content-center" style="width: 64px; height: 64px;">
-                                            <span class="h4 mb-0">{{ blogger.username|first|upper }}</span>
+                                            <span class="h4 mb-0 text-white">{{ blogger.username|first|upper }}</span>
                                         </div>
                                     {% endif %}
                                     <div>
                                         <h5 class="mb-1">
-                                            <a href="{% url 'blogger_detail' blogger.id %}" class="text-light text-decoration-none">
+                                            <a href="{% url 'blogger_detail' blogger.id %}" class="text-decoration-none">
                                                 {{ blogger.username }}
                                             </a>
                                         </h5>
@@ -45,17 +45,17 @@
 
         <!-- Sidebar -->
         <div class="col-md-4">
-            <div class="card bg-dark text-light mb-4">
+            <div class="card mb-4">
                 <div class="card-body">
                     <h5 class="card-title mb-3">Quick Links</h5>
                     <ul class="list-unstyled mb-0">
                         <li class="mb-3">
-                            <a href="{% url 'blog_list' %}" class="text-light text-decoration-none">
+                            <a href="{% url 'blog_list' %}" class="text-decoration-none">
                                 <i class="fas fa-list me-2"></i>All Blog Posts
                             </a>
                         </li>
                         <li class="mb-3">
-                            <a href="{% url 'about' %}" class="text-light text-decoration-none">
+                            <a href="{% url 'about' %}" class="text-decoration-none">
                                 <i class="fas fa-info-circle me-2"></i>About Us
                             </a>
                         </li>
