--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,7 +49,7 @@
                                         </div>
                                     {% endif %}
                                     <div>
-                                        <h6 class="mb-0" style="color: white;">{{ blogger.username }}</h6>
+                                        <h6 class="mb-0" style="color: var(--text-color);">{{ blogger.username }}</h6>
                                         <small class="text-muted">
                                             {{ blogger.blog_posts.first.created_at|date:"M j" }}
                                         </small>
