Added Profile Pictures

--- a/app/templates/create_post.html
+++ b/app/templates/create_post.html
@@ -11,9 +11,11 @@
                 
                 {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}">
-                            {{ message }}
-                        </div>
+                        {% if 'post' in message.tags %}
+                            <div class="alert alert-{{ message.tags }}">
+                                {{ message }}
+                            </div>
+                        {% endif %}
                     {% endfor %}
                 {% endif %}
 
